# CS370

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ennt.md  entt.md
CS370/: CMakeLists.txt  CS370.cpp  CS370.h
assets/: cmake_test_discovery.json  cmake_test_discovery_b3867b436e.json
assets/graphics/bgart/: mainbackground.aseprite  mainbackgroundNIGHT.aseprite
assets/graphics/tileset/: tilesetmain.aseprite
assets/sprites/: cowRHeadbutt.aseprite  mainbackground.aseprite  tilesetmain.aseprite
assets/sprites/cow/: cowRHeadbutt.aseprite
assets/sprites/enemies/alien/: AlienR.ase
assets/sprites/enemies/farmer/: FarmerR.aseprite
assets/tiled/: cs370.tiled-session  levels.world  maintileset.tsx  stage1.tmj  stage1.tmx  stage2.tmx  stage3.tmx  test.tmx  test_tileset.tsx
documentation/: ECS.md  Enemy_Behavior Function.md  build-system.md  errorHandling.md  spikePlan1.md  spikePlan2.md  spikeReview1.md
documentation/Components/: EnemyProperties.md  spriteData.md
include/: raytmx.h
src/: CMakeLists.txt  CS370.cpp  main.cpp
src/components/: animation.cpp  animation.hpp  components.hpp  enemy_behavior.cpp  enemy_behavior.hpp  enemy_stats.cpp  enemy_stats.hpp  health_pickup.hpp  physics_object.cpp  physics_object.hpp  player_hud.hpp  player_stats.cpp  player_stats.hpp  projectile_stats.cpp  projectile_stats.hpp  sprite_data.cpp  sprite_data.hpp
src/entities/: camera.cpp  camera.hpp  enemy.cpp  enemy.hpp  entities.hpp  health_upgrade.cpp  health_upgrade.hpp  map.cpp  map.hpp  player.cpp  player.hpp  projectile.cpp  projectile.hpp
src/systems/: asset_loader.cpp  asset_loader.hpp  camera_controller.cpp  camera_controller.hpp  collision_system.cpp  collision_system.hpp  enemy_controller.cpp  enemy_controller.hpp  health_upgrade_controller.cpp  health_upgrade_controller.hpp  hud_system.cpp  hud_system.hpp  iframes_system.cpp  iframes_system.hpp  map_manager.cpp  map_manager.hpp  player_controller.cpp  player_controller.hpp  player_enemy_collision.cpp  player_enemy_collision.hpp  player_health_upgrade_collision.cpp  player_health_upgrade_collision.hpp  player_movement.cpp  player_movement.hpp  projectile_manager.cpp  projectile_manager.hpp  systems.hpp
tests/: CMakeLists.txt  asset_tests.cpp  assets.cpp  cmake_test_discovery.json  test_controller.cpp
